Notes CRUD updates
